--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <nav class="site-nav">
                 <ul class="site-nav-list">
-                    <li class="item"><a href="./index.html">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a href="#contacts">Контакти</a></li>
+                    <li class="site-nav-item"><a href="./index.html" class="site-nav-link nav-link">Студия</a></li>
+                    <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+                    <li class="site-nav-item"><a href="#contacts" class="site-nav-link">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="auth-nav">
@@ -91,16 +91,17 @@
             <section class="work">
                 <h2>Чем мы занимаемся</h2>
                 <ul class="our-work-list">
-                    <li class="our-work-item our-work-item1">
-                        <span>Десктопные приложение</span>
+                    <li class="our-work-item">
+                        <img src="./images/box1.jpg" alt="desktop applications">
+                        <span class="our-work-text">Десктопные приложение</span>
                     </li>
-                    <li class="our-work-item our-work-item2">
-                        <!-- <img src="./images/box2.jpg" width="370" height="295" alt="Mobile app"> -->
-                        <span>Мобильные приложения</span>
+                    <li class="our-work-item">
+                        <img src="./images/box2.jpg" width="370" height="295" alt="Mobile app">
+                        <span class="our-work-text">Мобильные приложения</span>
                     </li>
-                    <li class="our-work-item our-work-item3">
-                        <!-- <img src="./images/box3.jpg" width="370" height="295" alt="Design solutions"> -->
-                        <span>Дизайнерские решения</span>
+                    <li class="our-work-item">
+                        <img src="./images/box3.jpg" width="370" height="295" alt="Design solutions">
+                        <span class="our-work-text">Дизайнерские решения</span>
                     </li>
                 </ul>
             </section>
