--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,17 @@
         </div>
         <nav class="site-nav">
           <ul class="site-nav-list">
-            <li class="item"><a href="./index.html">Студия</a></li>
-            <li class="item"><a href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a href="#contacts">Контакти</a></li>
+            <li class="site-nav-item">
+              <a href="./index.html" class="site-nav-link">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" class="site-nav-link nav-link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="site-nav-item">
+              <a href="#contacts" class="site-nav-link">Контакти</a>
+            </li>
           </ul>
         </nav>
         <ul class="auth-nav">
@@ -68,11 +76,13 @@
             />
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -83,11 +93,13 @@
             />
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -98,11 +110,13 @@
             />
             <h3>Ресторан Seafood</h3>
             <p>Приложение</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -113,11 +127,13 @@
             />
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -128,11 +144,13 @@
             />
             <h3>Проект Boxes</h3>
             <p>Приложение</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -143,11 +161,13 @@
             />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -158,11 +178,13 @@
             />
             <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -173,11 +195,13 @@
             />
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
           <div class="projects-item">
             <img
@@ -188,11 +212,13 @@
             />
             <h3>Growing Business</h3>
             <p>Приложение</p>
-            <p class="projects-text">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
+            <div class="projects-text">
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </div>
           </div>
         </section>
       </div>
